--- a/LearnSalesforce/force-app/main/default/classes/AccountTrialClass.cls
+++ b/LearnSalesforce/force-app/main/default/classes/AccountTrialClass.cls
@@ -1,5 +1,6 @@
 public with sharing class AccountTrialClass {
     public AccountTrialClass() {
             System.System.debug('My first cLass');
+        made changes directly in working 1 branch from GIT HUb
     }
 }
