--- a/LearnSalesforce/force-app/main/default/classes/AccountTrialClass.cls
+++ b/LearnSalesforce/force-app/main/default/classes/AccountTrialClass.cls
@@ -2,5 +2,6 @@ public with sharing class AccountTrialClass {
     public AccountTrialClass() {
             System.System.debug('My first cLass');
             system.debug('Second change');
+            3rd change in working child
     }
 }
